app/globals.css
:root {
  --scale-factor: 1;
  /* choose what rem u want and divide by the root style, place that in the query */

  --title-font: calc(1.8rem * var(--scale-factor));
  --mobile-font-size: calc(0.92rem * var(--scale-factor));
  --mobile-small-font-size: calc(1rem * var(--scale-factor));
  --mobile-tiny-font-size: calc(0.85rem * var(--scale-factor));
  --mobile-title-font-size: 2.2rem;
  --mobile-extreme-small-font-size: calc(0.67rem * var(--scale-factor));
  --padding-sides: calc(1rem * var(--scale-factor));
  --padding-vertical: calc(0.555rem * var(--scale-factor));
  --container-width: 18%;

  --youngblood: "youngblood", sans-serif;
  --symbols: "rufina-stencil-ornaments", sans-serif;
  --transitionDetails:
    transform 0.15s ease-out,
    border-radius 0.4s ease-out,
    height 0.4s ease-out,
    width 0.4s ease-out,
    background-color 0.4s ease-out,
    opacity 1s ease-out,
    -webkit-transform 0.15s ease-out;
}

@font-face {
  font-family: 'studio pro';
  src: url(/studio-pro-regular-webfont.woff);
}

@font-face {
  font-family: 'PPMont';
  src: url(/PPNeueMontreal-Medium.woff2);
}

@media screen and (width <=1600px) {
  :root {
    --scale-factor: 0.833;
    /* e.g. Approximately 0.75rem: 0.75/0.9 = 0.833 */
    --container-width: 35%;
  }
}

@media screen and (width <=760px) {
  :root {
    --scale-factor: 0.722;
    --container-width: 63%;
  }

  #cursor-container,
  #custom-cursor,
  #custom-pointer {
    display: none;
  }
}

*::-webkit-scrollbar {
  display: hidden;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  cursor: none;
  transition-property: color, background-color;
  transition-duration: 0.15s;
  transition-timing-function: ease-out;
  /* border: green solid 1px; */
}

body {
  font-family: 'PPMont';
  /* font-weight: 400; */
  font-style: normal;
  background-color: var(--background);
  transition:
    filter 0.2s ease-out,
    opacity 0.2s ease-out,
    transform 0.3s ease-out;
}

/* .pageTransition {
  filter: blur(6px);
  opacity: 0;
  transform: translateX(-100px);
} */

.main {
  position: relative;
  z-index: 3;
  padding-top: 10px;
}

#cursor-container {
  position: fixed;
  top: 0;
  left: 0;
  pointer-events: none;
  z-index: 1000;
  visibility: hidden;
  opacity: 0;
  mix-blend-mode: difference;

  -webkit-transition: visibility 3s ease-out, opacity 3s ease-out;
  -o-transition: visibility 3s ease-out, opacity 3s ease-out;
  transition: visibility 3s ease-out, opacity 3s ease-out;
}

#custom-cursor {
  position: absolute;
  width: 10px;
  height: 10px;
  border-radius: 100%;
  background-color: transparent;
  border: solid 1px var(--cursor);
  z-index: 999;
  visibility: hidden;

  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);

  -webkit-transition: var(--transitionDetails);
  transition: var(--transitionDetails);
  -o-transition: var(--transitionDetails);
  transition: var(--transitionDetails);
}

#custom-pointer {
  position: absolute;
  width: 4px;
  height: 4px;
  border-radius: 100%;
  background-color: var(--cursor);
  z-index: 1000;
  opacity: 1;
  mix-blend-mode: difference;

  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);

  transition: border-radius 0.4s ease-out, opacity 0.3s ease-out, height 0.4s ease-out, width 0.4s ease-out;
  -o-transition: border-radius 0.4s ease-out, opacity 0.3s ease-out, height 0.4s ease-out, width 0.4s ease-out;
}

/* #custom-cursor.hovering {
  height: 9px;
  width: 9px;
}

#custom-pointer.hovering {
  height: 8px;
  width: 8px;
} */

#custom-cursor.hidden {
  height: 0px;
  width: 0px;
  visibility: hidden;
  opacity: 0;
}

#custom-cursor.visible,
#cursor-container.visible {
  visibility: visible;
  opacity: 1;
}

a {
  all: unset;
}

@media screen and (width >=768px) {
  .link {
    transition: filter 0.16s ease-out;
  }

  .link:hover {
    filter: drop-shadow(0px 0px 0.4rem var(--text));
  }

  .logo:hover {
    filter: drop-shadow(0px 0px 0.4rem var(--cursor));
  }
}

#lightbox {
  position: fixed;
  z-index: 500;
  top: 0;
  left: 0;
  width: 100%;
  height: 100dvh;
  background-color: rgba(0, 0, 0, 0.8);
  display: none;
  overflow: hidden;
}

#lightbox.active {
  display: flex;
  justify-content: center;
  align-items: center;
}

.lightbox-content {
  position: relative;
  max-width: 90%;
  max-height: 92%;
  display: flex;
  justify-content: center;
  overflow: hidden;
}

.lightbox-img {
  max-width: 100%;
  max-height: 100%;
  object-fit: contain;
  border-radius: 3px;
}

.prev-button,
.next-button,
.close-button {
  position: absolute;
  background: transparent;
  color: white;
  border: none;
  font-size: 15px;
  cursor: pointer;
  mix-blend-mode: difference;
}

.prev-button {
  left: 10px;
  top: 50%;
  transform: translateY(-50%);
}

.next-button {
  right: 10px;
  top: 50%;
  transform: translateY(-50%);
}

.close-button {
  top: 10px;
  right: 10px;
}

.image-counter {
  position: absolute;
  bottom: 0;
  right: 0;
  background-color: transparent;
  color: white;
  padding: 0px 0px;
  border-radius: 15px;
  font-size: 10px;
  mix-blend-mode: difference;
}

.preloaderBackground {
  background-color: var(--background);
  width: 100%;
  height: 100%;
  position: fixed;
  z-index: 1000;
  display: flex;
  justify-content: center;
  align-items: center;
}

.star-text-div {
  justify-content: center;
  align-items: center;
  position: absolute;
  right: -13%;
  top: 18%;
  z-index: 50;
}

.star-text {
  color: var(--text);
  font-size: 0.8rem;
}

@media screen and (width <=768px) {
  .star-text {
    font-size: 10px;
  }

  .star-text-div {
    top: 15%;
    right: -14%;
  }
}

.star-text::before {
  content: '★';
  display: inline-block;
  animation: spin 10s infinite linear;
}

.title-star-holder {
  width: fit-content;
  margin-left: auto;
  position: relative;
}

.title-star-holder::before {
  content: '★';
  display: inline-block;
  animation: spin 10s infinite linear;
  position: absolute;
  left: -10px;
  top: -5px;
  font-size: 8px;
}

.footer-star {
  position: relative;
}

.footer-star::before {
  content: '★';
  display: inline-block;
  animation: spin 10s infinite linear;
  position: absolute;
  left: -15px;
  top: 0px;
  font-size: 8px;
}

.footer-star-mobile {
  position: relative;
}

.footer-star-mobile::before {
  content: '★';
  display: inline-block;
  animation: spin 10s infinite linear;
  position: absolute;
  left: 0px;
  top: 0px;
  font-size: 8px;
}

.project-page-star {
  position: relative;
  color: var(--text);
}

.project-page-star::before {
  content: '★';
  display: inline-block;
  animation: spin 18s infinite linear;
  position: absolute;
  left: 20px;
  top: -50px;
  font-size: 75px;
  filter: blur(5px);
}

.project-page-star-mobile {
  position: relative;
  color: var(--text);
}

.project-page-star-mobile::before {
  content: '★';
  display: inline-block;
  animation: spin 18s infinite linear;
  position: absolute;
  right: 18px;
  bottom: 38px;
  font-size: 35px;
  filter: blur(3px);
}

@media screen and (width >=768px) {
  .project-page-star-mobile::before {
    content: "" !important;
  }
}

.main-hero-star {
  position: absolute;
  top: 45%;
  left: 50%;
  transform: translate(-50%, -50%);
  transform-origin: center;
  filter: blur(12px);
  z-index: -1;
}

.hero-star {
  font-size: 180px;
}

.hero-star::before {
  content: '★';
  display: inline-block;
  animation: spin 35s infinite linear;
}

@keyframes spin {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}






.lineDivNav {
  width: 100%;
  display: flex;
  justify-content: space-between;
  border-bottom: solid var(--text) 1px;
  align-items: center;
}

.lineDivFooter {
  width: 100%;
  display: flex;
  justify-content: space-around;
  border-top: solid var(--text) 1px;
  padding-top: 10px;
  padding-bottom: 5px;
  gap: 8px;
}

.lineDivFooterMobile {
  width: 100%;
  display: flex;
  justify-content: space-between;
  border-top: solid var(--text) 1px;
  padding-top: 10px;
  padding-bottom: 5px;
  gap: 18px;
}

.cursor-trail-container {
  position: relative;
  width: 100%;
  height: 100vh;
  /* or 100vh */
  overflow: hidden;
  border: #000 solid 1px;
  z-index: 1;
  cursor: none;
  /* hide default cursor */
}

.cursor-trail-container-project-page {
  z-index: 1;
  cursor: none;
  width: 100%;
  height: 100%;
  position: fixed;
  overflow: hidden;
  top: 0;
  left: 0;
}

/* trail text */
.trail-item,
.trail-item-project-page {
  position: absolute;
  top: 0;
  left: 0;
  margin: 0;

  color: var(--text);
  font-size: 12px;
  white-space: nowrap;

  pointer-events: none;

  opacity: 0;
  will-change: transform, opacity;
}

.trail-item-project-page {
  opacity: 0.2;
}

@media screen and (width <=768px) {
  .cursor-trail-container {
    touch-action: manipulation;
  }

  .trail-item,
  .trail-item-project-page {
    font-size: calc(var(--mobile-font-size) - 0.12rem);
  }
}

